# appfwk

./: .gitignore  CMakeLists.txt  README.md  appfwkConfig.cmake.in
apps/: CMakeLists.txt  DAQModuleManager.hpp  daq_application.cc  daq_application.cxx  daq_sink_source.cc  dynamic_loading_test_app.cc  echo_test_app.cc  producer_consumer_test_app.cc  simple_test_app.cc
apps/detail/: Application.hxx  DAQModuleManager.hxx
cmake/: Config.cmake.in  DAQ.cmake  Findcetlib.cmake  appfwkConfig.cmake.in
doc/: CMakeLists.txt  Home.md
docs/: ActionPlans.md  App-Fwk-v1-pre-release-checklist.md  Application.drawio  Coding-style.md  Compiling-and-running-old.md  Compiling-and-running-under-v1.0.0.md  Compiling-and-running-under-v1.1.0.md  Compiling-and-running-under-v1.2.0.md  Compiling-and-running-under-v1.2.1.md  Compiling-and-running-under-v2.0.0.md  Compiling-and-running-under-v2.1.0.md  Compiling-and-running-under-v2.2.0.md  Compiling-and-running-under-v2.3.0.md  Compiling-and-running-under-v2.4.0.md  Compiling-and-running.md  Contributors-Guide.md  Creating-a-new-package-old.md  Creating-a-new-package-under-v1.1.0.md  Creating-a-new-package-under-v1.2.0.md  Creating-a-new-package-under-v1.2.1.md  Creating-a-new-package-under-v2.0.0.md  Creating-a-new-package-under-v2.1.0.md  Creating-a-new-package-under-v2.2.0.md  Creating-a-new-package-under-v2.3.0.md  Creating-a-new-package-under-v2.4.0.md  DAQModules.md  Daq-Application.md  Glossary-of-Terms.md  How-to-write-your-DAQModule.md  Instructions-for-creating-a-new-package.md  Interfaces-between-DAQ-objects.md  Queue-interfaces.md  Queue-testing.md  README.md  Run-daq-locally.org  Simple-list-reversal-application.md  Simple-readout-application.md  Small-HLF-dispatcher-demo.md  Step-by-step-instructions-for-creating-your-own-DAQModule-package-under-v1.1.0.md  Step-by-step-instructions-for-creating-your-own-DAQModule-package-under-v1.md  (+9 more)
include/: CMakeLists.txt
plugins/: FileCommandFacility.cpp  dbConfFacility.cpp  fileConfFacility.cpp  restConfFacility.cpp
schema/: README.md  README.org  appfwk-FakeDataConsumerDAQModule-make.jsonnet  appfwk-FakeDataConsumerDAQModule-schema.jsonnet  appfwk-FakeDataProducerDAQModule-make.jsonnet  appfwk-FakeDataProducerDAQModule-model.jsonnet  appfwk-FakeDataProducerDAQModule-schema.jsonnet  appfwk-app-schema.jsonnet  appfwk-appinfo-schema.jsonnet  appfwk-cmd-make.jsonnet  appfwk-cmd-model.jsonnet  appfwk-cmd-schema.jsonnet  appfwk-cmd-valid.jsonnet  appfwk-cpp.hpp.j2  appfwk-fdc-make.jsonnet  appfwk-fdc-model.jsonnet  appfwk-fdc-schema.jsonnet  appfwk-fdp-make.jsonnet  appfwk-fdp-model.jsonnet  appfwk-fdp-schema.jsonnet  (+10 more)
src/: Application.cpp  Application.hpp  CMakeLists.txt  CommandIssues.cc  CommandLineInterpreter.hpp  ConfigurationHandler.cpp  ConfigurationHandler.hpp  ConfigurationManager.cpp  ConfigurationWrapper.hpp  DAQModule.cpp  DAQModuleHelper.cpp  DAQModuleManager.cpp  DAQModuleManager.hpp  DAQProcess.cc  DAQProcess.cpp  DebugLoggingUserModule.cc  FanOutDAQModule.cc.in  FanOutDAQModule.cpp.in  FileCommandFacility.cpp  ModuleConfiguration.cpp  QueryResponseCommandFacility.cc  QueryResponseCommandFacility.cpp  QueryResponseCommandFacility.hh  QueryResponseCommandFacility.hpp  QueueRegistry.cc  QueueRegistry.cpp  StdDeQueue.cc.in  VectorIntDequeBuffer.cc  VectorIntStdDeQueue.cc
src/Buffers/: CMakeLists.txt  DequeBuffer.cc  FollyDeque.cc
src/DAQModules/: CMakeLists.txt  DebugLoggingDAQModule.cc  FakeDataConsumerDAQModule.cc  FakeDataProducerDAQModule.cc  VectorIntFanOutDAQModule.cc
src/UserModules/: CMakeLists.txt  DebugLoggingUserModule.cc  FakeDataConsumerUserModule.cc  FakeDataProducerUserModule.cc  VectorIntFanOutUserModule.cc
src/detail/: Application.hxx  ConfigurationHandler.hxx  ConfigurationWrapper.hxx  DAQModuleManager.hxx
src/rest/: Api.cpp
test/: CMakeLists.txt  DebugLoggingDAQModule.cc  DebugLoggingDAQModule.cpp  DebugLoggingDAQModule.hh  DebugLoggingDAQModule.hpp  DequeBuffer_concurrency_check.cc  DequeBuffer_t.cc  DummyModule.cpp  DummyModule.hpp  FakeDataConsumerDAQModule.cc  FakeDataConsumerDAQModule.cpp  FakeDataConsumerDAQModule.hh  FakeDataConsumerDAQModule.hpp  FakeDataProducerDAQModule.cc  FakeDataProducerDAQModule.cpp  FakeDataProducerDAQModule.cxx  FakeDataProducerDAQModule.hh  FakeDataProducerDAQModule.hpp  buffer_IO_check.cc  buffer_concurrency_check.cc  daq_sink_source.cc  daq_sink_source.cxx  dummy_test_app.cxx  echo_test_app.cc  echo_test_app.cxx  producer_consumer_dynamic_test.json  producer_consumer_test_app.cc  producer_consumer_test_app.cxx  queue_IO_check.cc  queue_IO_check.cxx  run_queue_IO_checks.sh  test-config.json  zeromqueue_check.cc  zeromqueue_ptr_check.cc
test/appfwk/fdc/: Structs.hpp
test/appfwk/fdp/: Structs.hpp
test/apps/: dummy_module_test.cxx  dummy_test_app.cxx  queue_IO_check.cxx
test/config/: appSession.data.xml  appSystem.data.xml  appfwk.data.xml
test/include/appfwk/fdc/: Structs.hpp
test/plugins/: DummyModule.cpp  DummyModule.hpp  FakeDataConsumerDAQModule.cpp  FakeDataConsumerDAQModule.hpp  FakeDataProducerDAQModule.cpp  FakeDataProducerDAQModule.hpp
test/schema/appfwk/: appfwk.schema.xml
test/scripts/: daq_application_test.sh  queue_io_check.sh  test.json
test/scripts/confdata/: TestApp_conf.json  TestApp_init.json  app_name_init.json
test/src/appfwk/fdp/: Structs.hpp
unittest/: Application_test.cxx  CMakeLists.txt  CommandLineInterpreter_test.cxx  DAQModuleManager_test.cxx  DAQModuleThreadHelper_test.cc  DAQModuleThreadHelper_test.cxx  DAQModule_test.cxx  DAQProcess_test.cc  DAQSink_DAQSource_test.cxx  DequeBuffer_test.cc  FanOutDAQModule_test.cc  FanOutDAQModule_test.cxx  FollyQueue_metric_test.cxx  FollyQueue_test.cxx  Interruptible_test.cxx  NamedObject_test.cxx  QueueRegistry_test.cxx  Queue_test.cxx  RestApi_test.cxx  StateObject_test.cxx  StdDeQueue_test.cc  StdDeQueue_test.cxx  ThreadHelper_test.cxx
unittest/DAQModules/: CMakeLists.txt  DAQModuleThreadHelper_test.cc  FanOutDAQModule_test.cc
unittest/UserModules/: CMakeLists.txt  FanOutUserModule_test.cc  UserModuleThreadHelper_test.cc
(+164 files in other folders)
