
#file(GLOB source_files *.cc)
#add_library(app-framework_DAQModules SHARED ${source_files} )

add_library(app-framework_DebugLoggingDAQModule_duneDAQModule DebugLoggingDAQModule.cc)
add_library(app-framework_FakeDataConsumerDAQModule_duneDAQModule FakeDataConsumerDAQModule.cc)
add_library(app-framework_FakeDataProducerDAQModule_duneDAQModule FakeDataProducerDAQModule.cc)
add_library(app-framework_VectorIntFanOutDAQModule_duneDAQModule VectorIntFanOutDAQModule.cc)
