
add_executable(UserModuleThreadHelper_test UserModuleThreadHelper_test.cc)
target_link_libraries(UserModuleThreadHelper_test ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} pthread)
target_compile_definitions(UserModuleThreadHelper_test PRIVATE "BOOST_TEST_DYN_LINK=1")
target_include_directories(UserModuleThreadHelper_test PRIVATE ${Boost_INCLUDE_DIRS})
add_test(NAME UserModuleThreadHelper_test COMMAND UserModuleThreadHelper_test)

